MPP-3702: Fix unclickable alias button on mobile viewports

--- a/frontend/src/components/dashboard/aliases/LabelEditor.module.scss
+++ b/frontend/src/components/dashboard/aliases/LabelEditor.module.scss
@@ -47,6 +47,7 @@
   // leading it to overlap this confirmation message.
   // Thus, this z-index makes this message overlap that.
   z-index: 2;
+  pointer-events: none; // Stop the label from blocking the alias copy button in mobile width's
 
   &.is-shown {
     opacity: 1;
